added modal rectifications

--- a/src/Components/ExpenseTracker.css
+++ b/src/Components/ExpenseTracker.css
@@ -16,3 +16,17 @@ th {
   text-align: center;
   font-size: 22px;
 }
+
+.width50 {
+  width: 44%;
+}
+
+.input {
+  width: 57%;
+  text-align: center;
+}
+
+.custom-modal-width {
+  width: 84%; /* Set the modal width to 80% */
+  margin: auto;
+}
