--- a/src/Components/ExpenseTracker.css
+++ b/src/Components/ExpenseTracker.css
@@ -12,9 +12,20 @@ th {
 }
 
 .select {
-  width: 50%;
+  width: 60%;
   text-align: center;
   font-size: 22px;
+  border-radius: 6px;
+  border-width: 3px;
+  /* background-color: #0d6efd; */
+  /* color: white; */
+  padding: 6px 12px;
+  border-color: black;
+  font-weight: 500;
+}
+
+.red-icon {
+  color: red;
 }
 
 .width50 {
@@ -29,4 +40,11 @@ th {
 .custom-modal-width {
   width: 84%; /* Set the modal width to 80% */
   margin: auto;
+}
+
+.eventContainer {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+  align-items: center;
 }
