--- a/src/Components/ExpenseTracker.css
+++ b/src/Components/ExpenseTracker.css
@@ -55,7 +55,7 @@ th {
 
 .lightYellow {
   height: 100%;
-  border-top: 2px solid black;
+  /* border-top: 2px solid black; */
   background-color: #f1f3c2;
 }
 
