--- a/src/Components/ExpenseTracker.css
+++ b/src/Components/ExpenseTracker.css
@@ -64,7 +64,7 @@ th {
 }
 
 .lightYellow {
-  height: 100%;
+  /* height: 100%; */
   /* border-top: 2px solid black; */
   background-color: #f1f3c2;
 }
